@@ -41,10 +41,12 @@ static const char * const hash_func_names[HASH_FUNCS_N] = {
 	[HASH_FUNC_MD2]          = "MD2",
 	[HASH_FUNC_MD4]          = "MD4",
 	[HASH_FUNC_MD5]          = "MD5",
+	[HASH_FUNC_MDC2]         = "MDC2",
 	[HASH_FUNC_RIPEMD128]    = "RIPEMD128",
 	[HASH_FUNC_RIPEMD160]    = "RIPEMD160",
 	[HASH_FUNC_RIPEMD256]    = "RIPEMD256",
 	[HASH_FUNC_RIPEMD320]    = "RIPEMD320",
+	[HASH_FUNC_SHA0]         = "SHA0",
 	[HASH_FUNC_SHA1]         = "SHA1",
 	[HASH_FUNC_SHA224]       = "SHA224",
 	[HASH_FUNC_SHA256]       = "SHA256",
