@@ -38,6 +38,7 @@ enum hash_func_e {
 	HASH_FUNC_MD2,
 	HASH_FUNC_MD4,
 	HASH_FUNC_MD5,
+	HASH_FUNC_SHA0,
 	HASH_FUNC_SHA1,
 	HASH_FUNC_SHA224,
 	HASH_FUNC_SHA256,
@@ -59,6 +60,7 @@ enum hash_func_e {
 	HASH_FUNC_GOST,
 	HASH_FUNC_SNEFRU128,
 	HASH_FUNC_SNEFRU256,
+	HASH_FUNC_MDC2,
 	HASH_FUNC_CRC32,
 	HASH_FUNC_ADLER32,
 };
